Añadido el login y return, conexion con base de datos, y mensajes con los errores